--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "atob": "^2.1.2",
     "express": "4.17.1",
     "moment": "2.24.0",
-    "socket.io": "2.2.*"
+    "socket.io": "2.2.*",
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "eslint": "^4.3.0"
