--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
-    "eslint": "^4.3.0"
+    "eslint": "^4.3.0",
+    "gulp": "^4.0.2"
   },
   "main": "server.js",
   "repository": {
