--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "atob": "^2.1.2",
     "express": "4.17.1",
+    "express-session": "^1.17.0",
     "moment": "2.24.0",
-    "socket.io": "2.2.*",
-    "sqlite3": "^4.1.0"
+    "sqlite3": "^4.1.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^4.3.0",
