--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   ],
   "dependencies": {
     "atob": "^2.1.2",
+    "compression": "^1.7.4",
     "express": "4.17.1",
     "express-session": "^1.17.0",
+    "helmet": "^3.21.2",
     "moment": "2.24.0",
     "sqlite3": "^4.1.0",
     "uuid": "^3.3.3"
